<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="RtlCompat"
    android:background="@color/white"
    tools:context="com.example.duaa.boxpoint.Fragment.AddClientFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"

        >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">





            <com.example.duaa.boxpoint.view.FontTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/addUser"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textStyle="bold"
                app:srcCompat="@drawable/ic_notifications_black_24dp"

                />

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp"

                />
        </LinearLayout>

    </FrameLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical"
>

    <com.example.duaa.boxpoint.view.FontTextViewRegular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newClient"
        android:textColor="@color/silverS"
        android:textStyle="bold"
        android:textSize="17sp"
        android:drawableStart="@drawable/user_new"
        android:drawablePadding="8dp"
        android:layout_gravity="start"
        android:gravity="center_vertical"
        />

    <com.example.duaa.boxpoint.view.FontTextViewRegular
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="مثال لنص يمكن ان يستبدل "
        android:textStyle="bold"
        android:textSize="13sp"
        android:layout_marginBottom="20dp"
        />


    <com.example.duaa.boxpoint.view.FontEditTextViewRegular
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:hint="@string/firstName"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_textview"
        android:textSize="13sp"
        android:singleLine="true"

        />
    <com.example.duaa.boxpoint.view.FontEditTextViewRegular
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:hint="@string/lastName"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_textview"
        android:textSize="13sp"

        />

    <com.example.duaa.boxpoint.view.FontEditTextViewRegular
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:hint="@string/userName"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_textview"
        android:textSize="13sp"

        />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >

            <com.example.duaa.boxpoint.view.FontEditTextViewRegular
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:hint="@string/password"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_textview"
                android:textSize="13sp"

                />

            <com.example.duaa.boxpoint.view.FontTextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textColor="@color/silverS"
                android:text="@string/change"
                android:gravity="center"
                android:layout_gravity="center_vertical|end"
                />

        </FrameLayout>



    <com.example.duaa.boxpoint.view.FontEditTextViewRegular
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:hint="@string/email"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_textview"
        android:textSize="13sp"

        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <com.example.duaa.boxpoint.view.FontTextViewRegular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/location"
        android:text="حدد الدولة"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        tools:ignore="RtlCompat" />

</LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        >

        <com.example.duaa.boxpoint.view.FontEditTextViewRegular
            android:id="@+id/imagePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/clientImage"
            android:background="@drawable/background_textview"
            android:textSize="13sp"
            android:layout_gravity="center_vertical"
            android:paddingEnd="90dp"
            android:enabled="false"

            />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:src="@drawable/upload"
            android:padding="5dp"
            android:layout_gravity="center_vertical|end"
            android:background="@drawable/background_button"
            />

    </FrameLayout>

    <com.example.duaa.boxpoint.view.FontEditTextViewRegular
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:hint="@string/numberPhone"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_textview"
        android:textSize="13sp"
        android:layout_gravity="center_vertical"
        />

    <com.example.duaa.boxpoint.view.FontButtonRegular
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"


        />
</LinearLayout>
    </ScrollView>

</LinearLayout>