<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.duaa.boxpoint.Fragment.AddComplaintFragment"
    tools:ignore="RtlCompat">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"

        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">




                <com.example.duaa.boxpoint.view.FontTextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/addComplaint"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_notifications_black_24dp"

                    />



                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_notifications_black_24dp"

                    />

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp"

                    />

            </LinearLayout>

        </FrameLayout>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <com.example.duaa.boxpoint.view.FontEditTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_textview"
                android:hint="@string/email"
                android:padding="12dp"

                android:textSize="13sp" />

            <com.example.duaa.boxpoint.view.FontEditTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_textview"
                android:hint="@string/numberPhone"
                android:inputType="number"
                android:padding="12dp"
                android:textSize="13sp"

                />

            <com.example.duaa.boxpoint.view.FontEditTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_textview"
                android:hint="@string/addressComplaint"
                android:padding="12dp"
                android:textSize="13sp"

                />

            <com.example.duaa.boxpoint.view.FontTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/contentOfComplaint"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.example.duaa.boxpoint.view.FontEditTextViewRegular
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_textview"
                android:gravity="top"
                android:padding="12dp"
                android:textSize="13sp"

                />

            <com.example.duaa.boxpoint.view.FontButtonRegular
                android:id="@+id/sendBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/background_button"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textStyle="bold"

                />


        </LinearLayout>

    </ScrollView>

</LinearLayout>
